<resources>
    <string name="app_name">Coinz</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login and register-->
    <string name="access_token">pk.eyJ1Ijoic2Vhbm11bGxhbiIsImEiOiJjam52czByYzMwZ21yM2tvYjlhaTVzZ2tlIn0.kIydMAAEwfMV1ORU7bP1aA</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="btn_login">Log in</string>
    <string name="btn_not_a_member">Not a member? Register here</string>
    <string name="btn_register">Register</string>
    <string name="btn_already_member">Already a member? Log in here </string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="auth_failed">Incorrect email or password</string>
    <string name="error_password_short">Password too short, enter minimum 6 characters</string>
...
